# personal-hedge-fund

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  config.yaml  docker-compose.yml  main.py  main_api.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260308_0001_initial.py  20260309_0002_chat_sessions.py  20260309_0003_v4_sessions_memory.py  20260311_0004_add_user_profile_table.py
npm/: README.md  package-lock.json  package.json
npm/lib/: config.js  image_handler.js  onboarding.js  runner.js
npm/tests/: config.test.js  image_handler.test.js  runner.test.js
src/hedge_fund/: __init__.py  api.py
src/hedge_fund/chat/: __init__.py  agent_models.py  agent_runtime.py  agent_tools.py  ai.py  cli_settings.py  command.py  config_manager.py  models.py  scratchpad.py  service.py  session_store.py  utils.py
src/hedge_fund/cli/: app.py  bootstrap.py  rendering.py
src/hedge_fund/config/: environment.py  logging.py  settings.py
src/hedge_fund/domain/: exceptions.py  interfaces.py  models.py
src/hedge_fund/integrations/: http.py
src/hedge_fund/services/: ai_analyst.py  (+10 more)
tests/: test_adaptive_style.py  test_ai_providers.py  test_api.py  test_bias_engine.py  test_calendar_providers.py  test_chat_agent.py  test_chat_ai.py  test_chat_cli.py  test_chat_config.py  test_chat_service.py  test_chat_utils.py  test_cli.py  test_image_analysis.py  test_onboarding.py  test_orchestrators.py  test_repository.py  test_risk_calculator.py  test_risk_service.py  test_setup_scanner.py  test_trade_plan.py
(+20 files in other folders)
