[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-ai-hedge-fund"
version = "3.3.11"
description = "Docker-first CLI forex trading assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0,<2.0.0",
  "httpx>=0.28.0,<0.29.0",
  "langchain>=1.0.0,<2.0.0",
  "langchain-google-genai>=3.0.0,<4.0.0",
  "langchain-openai>=1.0.0,<2.0.0",
  "openai>=2.0.0,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.8.0,<3.0.0",
  "pyyaml>=6.0.2,<7.0.0",
  "rich>=14.0.0,<15.0.0",
  "sqlalchemy>=2.0.39,<3.0.0",
  "tavily-python>=0.7.0,<1.0.0",
  "typer>=0.15.2,<1.0.0",
  "fastapi>=0.110.0,<0.111.0",
  "uvicorn>=0.29.0,<0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=6.0.0,<7.0.0",
]

[project.scripts]
hedge-fund = "hedge_fund.cli.app:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
